--- a/CodeOrganizer/CodeOrganizer_VS8.csproj
+++ b/CodeOrganizer/CodeOrganizer_VS8.csproj
@@ -11,6 +11,8 @@
     <NoStandardLibraries>false</NoStandardLibraries>
     <AssemblyName>CodeOrganizer</AssemblyName>
     <RootNamespace>CodeOrganizer</RootNamespace>
+<DefineConstants Condition="'$(TargetFrameworkVersion)' == 'v4.0'">RUNNING_ON_FW_4</DefineConstants>
+<DefineConstants Condition="'$(TargetFrameworkVersion)' != 'v4.0'">NOT_RUNNING_ON_FW_4</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
