--- a/CPPHelper/CPPHelperConfig/CPPHelperConfig.csproj
+++ b/CPPHelper/CPPHelperConfig/CPPHelperConfig.csproj
@@ -36,7 +36,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\CodeOrganizer\bin\</OutputPath>
+    <OutputPath>..\CPPHelper\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
