--- a/CPPHelper/CPPHelper/CPPHelper.csproj
+++ b/CPPHelper/CPPHelper/CPPHelper.csproj
@@ -187,7 +187,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CPPHelper - For Testing.AddIn" />
-    <Content Include="CPPHelper.AddIn" />
+    <Content Include="CPPHelper.AddIn">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Icons\X.png" />
     <None Include="Icons\Document.png" />
     <None Include="Icons\Event.png" />
